tests/paczka1/fuzzy1/19185591.err
Error in line 22: hJRrBIaNro S505 63,0
Error in line 28: vCqOvp S379 284,9
Error in line 24: S505 S505 10,0
